# PPM_Huffman

./: .gitignore  CMakeLists.txt  COMPTXT01.txt  COMPTXT01_K2.txt  COMPTXT01_K3.txt  DECTXT01.txt  README.md  classificador_ppm.txt  compressed.lgz  compressed_brascubas.lgz  compressed_brascubas.txt  compressed_file.txt  compressed_file_k1.txt  compressed_file_k2.txt  compressed_file_k3  compressed_file_k4.txt  compressed_file_k5.txt  compressed_k1.txt  compressed_k3.txt  compressed_k4.txt  compressed_k5.txt  decompressed_file_k4.txt  decompressed_k1.txt  decompressed_k2_teste.txt  f2.txt  input_1.txt  machado_modelo.txt  modernismo.model  output.txt  output_test.txt  realismo.model  romantismo.model  test_compressed.txt
Livros/Modernismo/: a_hora_da_estrela.txt  capitaes_de_areia.txt  vidas_secas.txt
Livros/Realismo/: o_ateneu.txt  quincas_borba.txt
Livros/Romantismo/: iracema.txt  lira_dos_vinte_anos.txt  o_guarani.txt  ubirajara.txt
Livros/Simbolismo/: a_viuvinha.txt  broqueis.txt
include/: context.h  file_formatter.h  hash.h  hash_map.h  huffman_tree.h  ppm.h  utils.h
src/: context.c  file_formatter.c  hash.c  hash_map.c  huffman_tree.c  main.c  ppm.c  utils.c
